--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -17,6 +17,9 @@ Neste blog post, compartilho minha jornada na plataforma Spotify através do Pod
 
 ### Episódios Destacados
 
+#### #14 Episódio com Peter König
+[![#14 Episódio com Peter König](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/14.png)](https://open.spotify.com/episode/5y3lQmumfnukYJ22jL51F3?si=fb0784aa7a4540c0)
+
 #### #13 Episódio com Amim Knabben: Explorando Kubernetes for Fun e Profit
 [![#13 Episódio com Amim Knabben: Explorando Kubernetes for Fun e Profit](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/13.png)](https://open.spotify.com/episode/2rSd7sRX4WI9LWKhtFbKRa?si=665c594fa4bd4af2)
 
