--- a/_posts/2024-11-02-mvp.day.md
+++ b/_posts/2024-11-02-mvp.day.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "CI&T MVP Day: Conexão, Conhecimento e Inovação em Cloud e Inteligência Artificial!"
+title: "MVP TALKS CI&T: Conexão, Conhecimento e Inovação em Cloud e Inteligência Artificial!"
 author: rafaferreira011
 #date: 2023-10-27 18:30:00 -500
-categories: [Registro Eventos Presenciais, Palestrante, CI&T MVP Day]
-tags: [Registro Eventos Presenciais, Eventos, Comunidade, CI&T MVP Day]
+categories: [Registro Eventos Presenciais, Palestrante, MVP TALKS CI&T]
+tags: [Registro Eventos Presenciais, Eventos, Comunidade, MVP TALKS CI&T]
 ---
 
 
