--- a/_posts/2024-11-02-mvp.day.md
+++ b/_posts/2024-11-02-mvp.day.md
@@ -16,7 +16,7 @@ No último dia 24 de outubro, organizamos o primeiro CI&T MVP Day — um evento 
 > 💬 "Posso dizer! CI&T MVP Day foi o pipoco do trovão azul celestial!" — *Cláudio Raposo, Software Architect e MVP Microsoft*
 
 
-## O que Rolou no CI&T MVP Day?
+## O que Rolou no CI&T MVP Day:
 
 ### 🔹 Architecting a Secure Landing Zone for AI Workloads in the Cloud
 
