--- a/_posts/2024-11-04-tftec2024.md
+++ b/_posts/2024-11-04-tftec2024.md
@@ -7,9 +7,9 @@ categories: [Registro Eventos Presenciais, Participante, TFTEC]
 tags: [Registro Eventos Presenciais, Eventos, Comunidade, TFTEC]
 ---
 
-Nos dias 26 e 27 de outubro, São Paulo foi palco do evento [**TFTEC Ao Vivo**](https://www.tftec.com.br/), uma imersão única e transformadora no universo do Azure. O evento reuniu profissionais e entusiastas de tecnologia de todo o Brasil para um aprendizado prático e aprofundado, com sessões "mão na massa" e interações em tempo real com especialistas. Foram mais de 16 horas de conteúdo intensivo, distribuídas em dois dias, proporcionando uma experiência completa e exclusiva aos participantes.
+Nos dias 26 e 27 de outubro, São Paulo foi palco do evento [**TFTEC Ao Vivo**](https://www.tftec.com.br/tftecaovivo-2024/), uma imersão totalmente única no universo do Azure. O evento reuniu profissionais e entusiastas de tecnologia de todo o Brasil para um aprendizado prático e aprofundado, com um dia cheio de "mão na massa" e interações em tempo real com especialistas. Foram mais de 16 horas de conteúdo intensivo, distribuídas em dois dias, proporcionando uma experiência completa e exclusiva aos participantes.
 
-Além do aprendizado técnico, o evento ofereceu diversas oportunidades de **networking**, permitindo a criação de conexões significativas e duradouras entre os profissionais da comunidade Azure. Houve também um happy hour para os participantes relaxarem e trocarem experiências.
+Além do aprendizado técnico, o evento ofereceu diversas oportunidades de **networking**, permitindo conhecer a comunidade técnica além das fotinhas do Youtube e Linkedin HAHA. Houve também um happy hour para os participantes onde trocamos experiências e demos várias risadas.
 
 ### Benefícios oferecidos aos participantes:
 
@@ -19,45 +19,41 @@ Além do aprendizado técnico, o evento ofereceu diversas oportunidades de **net
 - Acesso às gravações por 2 anos.
 - Certificado de participação impresso.
 
-Os alunos do **TFTEC Prime** que participaram do evento receberam vantagens especiais, como renovação gratuita ou descontos para eventos futuros.
-
-![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/01.png)
+Os alunos do [**TFTEC Prime**](https://www.tftec.com.br/) que participaram do evento receberam vantagens especiais, como renovação gratuita ou descontos para eventos futuros.
 
 ## Arquitetura da Solução Azure do TFTEC Cloud
 
-Um dos grandes destaques do evento foi a apresentação de uma **arquitetura robusta e moderna** para aplicações no Azure, projetada para alta escalabilidade e segurança. Esse exemplo prático foi essencial para que os participantes compreendessem como construir soluções complexas na plataforma. Vamos explorar os principais componentes dessa arquitetura.
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/01.png)
+
+Um dos grandes destaques do evento foi a apresentação de uma **arquitetura robusta e moderna** para aplicações no Azure, projetada para alta escalabilidade e segurança. Esse exemplo prático foi essencial para que os participantes compreendessem como construir soluções complexas na plataforma. Irei explorar os principais componentes dessa arquitetura.
 
 ### Visão Geral da Arquitetura
 
 A arquitetura integra diversos serviços do Azure, organizados para oferecer uma infraestrutura segura, escalável e fácil de manter para aplicações corporativas. Os principais elementos são:
 
-- **Azure DevOps**: Utilizado para versionamento e CI/CD. Com o Azure Repos para controle de versão do código, Azure Pipelines para automação do ciclo de desenvolvimento e entrega, e Terraform para definição de infraestrutura como código (IaC), os processos de desenvolvimento e operações são otimizados, garantindo agilidade e consistência nas implementações.
-
-- **Azure Container Registry (ACR)**: Armazena os contêineres, permitindo fácil integração com o Kubernetes e outros serviços, facilitando o deploy seguro e contínuo das aplicações.
+- **Segurança e Autenticação**: Uso do Azure Active Directory (Entra ID) e Azure AD B2C, para autenticação e autorização para usuários internos e externos. O App Registration facilita o gerenciamento de permissões e registros de aplicações. 
 
 - **Application Gateway (App GW) e API Management (APIM)**: O App Gateway protege e gerencia o tráfego de entrada para as aplicações, enquanto o APIM centraliza a gestão de APIs, garantindo roteamento seguro e controle de acesso.
 
-- **Segurança e Autenticação**: A segurança é reforçada com o uso do Azure Active Directory (Entra ID) e Azure AD B2C, proporcionando autenticação e autorização para usuários internos e externos. O App Registration facilita o gerenciamento de permissões e registros de aplicações.
+- **Monitoramento e Análise**: Com o Azure Application Insights e Log Analytics, a arquitetura oferece visibilidade dos logs e desempenho. Isso facilita o monitoramento em tempo real.
 
-- **Monitoramento e Análise**: Com o Azure Application Insights e Log Analytics, a arquitetura oferece visibilidade completa dos logs e desempenho. Isso facilita o monitoramento em tempo real e a manutenção proativa, além de permitir insights detalhados sobre o comportamento das aplicações.
+- **Serviços Backend e Banco de Dados**: No backend, as APIs centralizam a lógica de negócios, incluindo sistemas de CRM e outros serviços essenciais. Essas APIs se conectam ao Azure SQL Database para armazenamento com alta disponibilidade e integridade dos dados.
 
-- **Serviços Backend e Banco de Dados**: No backend, as APIs centralizam a lógica de negócios, incluindo sistemas de CRM e outros serviços essenciais. Essas APIs se conectam ao Azure SQL Database para armazenamento persistente, garantindo alta disponibilidade e integridade dos dados.
+- **Serviços Integrados do Azure**: A arquitetura também utiliza serviços como Storage Account para armazenamento de arquivos, Key Vault para gerenciamento seguro de Secrets, Azure Functions para execução de tarefas sob demanda, Logic Apps para automação de fluxos de trabalho e DNS Zone.
 
-- **Serviços Integrados do Azure**: A arquitetura também utiliza serviços como Storage Account para armazenamento de arquivos, Key Vault para gerenciamento seguro de segredos, Azure Functions para execução de tarefas sob demanda, Logic Apps para automação de fluxos de trabalho e DNS Zone para gerenciamento de DNS.
+- **Azure DevOps**: Com o Azure Repos para controle de versão do código, Azure Pipelines para automação CI/CD, e Terraform para definição de infraestrutura como código (IaC).
+
+- **Azure Container Registry (ACR)**: Permite fácil integração com o Kubernetes e outros serviços, facilitando o deploy seguro e contínuo das aplicações.
+
+## Terraform e Kubernetes
 
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/02.png)
 
-## Expansão com Kubernetes e Terraform
-
-A arquitetura é ampliada com o uso do **Azure Kubernetes Service (AKS)** para orquestração de contêineres e **Terraform** para provisionamento da infraestrutura, detalhando ainda mais a estrutura mencionada anteriormente.
-
-### Principais Componentes e Fluxo
-
 #### Provisionamento de Infraestrutura com Terraform:
 
-- **Infraestrutura como Código (IaC)**: O Terraform é utilizado para gerenciar a infraestrutura como código, permitindo que toda a configuração seja descrita em arquivos, facilitando a reprodutibilidade e o versionamento.
+- **Infraestrutura como Código (IaC)**: O Terraform é utilizado para gerenciar a infraestrutura como código, permitindo que toda a configuração seja descrita em arquivos, facilitando a reutilização e o versionamento.
 
-- **Configuração e Versionamento**: Um profissional de DevOps configura o código Terraform para a infraestrutura, que é versionado no Azure Repos e gerenciado pelo Azure Pipelines, garantindo consistência e segurança nos deploys.
+- **Configuração e Versionamento**: Geralmente profissionais de DevOps configuram o código Terraform para a infraestrutura, que é versionado no Azure Repos e gerenciado por pipelines, garantindo consistência e segurança nos deploys.
 
 #### Pipeline de Build e Deploy:
 
@@ -71,25 +67,19 @@ A arquitetura é ampliada com o uso do **Azure Kubernetes Service (AKS)** para o
 
 #### Azure Kubernetes Service (AKS):
 
-- **Orquestração de Contêineres**: O AKS gerencia os contêineres, dividindo-os em diferentes nós, como System Node e App Node, garantindo que cada aplicação seja devidamente segregada e escalável.
-
-- **Distribuição de Carga de Trabalho**: O AKS consome as imagens armazenadas no ACR e distribui as cargas de trabalho conforme necessário, mantendo a disponibilidade e performance das aplicações.
+- **Orquestração de Contêineres**: O AKS gerencia os contêineres, consumindo as imagens armazenadas no ACR e distribuindo as cargas de trabalho conforme necessário, mantendo a disponibilidade e performance das aplicações.
 
 #### Monitoramento e Análise:
 
 - **Visibilidade e Monitoramento Contínuo**: Log Analytics e Application Insights oferecem uma visão em tempo real dos logs e dados de desempenho, facilitando a análise e resolução proativa de problemas.
 
-Essa expansão com Kubernetes e Terraform exemplifica como uma arquitetura moderna no Azure pode ser estruturada para garantir **escalabilidade**, **segurança** e **eficiência operacional**. Com AKS, Terraform e um pipeline de CI/CD robusto, a solução entrega uma infraestrutura que atende aos requisitos de negócios e fornece uma base sólida para crescimento e inovação contínuos.
+## Descrição do Pipeline de CI/CD com Terraform
 
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/03.png)
 
-## Descrição do Pipeline de CI/CD com Terraform
-
-O pipeline de CI/CD utiliza Azure DevOps e Terraform para gerenciar a infraestrutura como código. A seguir, descrevemos cada etapa do fluxo de trabalho:
-
 1. **Desenvolvimento**
    - **Codificação**: O desenvolvedor escreve o código da infraestrutura usando Terraform.
-   - **Pull Request (PR)**: Após finalizar, cria um PR no Azure Repos, sugerindo as mudanças.
+   - **Pull Request (PR)**: Após finalizar, cria um PR no Azure Repos, enviando as mudanças.
 
 2. **Pipeline de Integração Contínua (CI)**
    - **Validações Automatizadas**:
@@ -115,9 +105,10 @@ O pipeline de CI/CD utiliza Azure DevOps e Terraform para gerenciar a infraestru
 
 Esse fluxo garante que as mudanças na infraestrutura sejam aplicadas de forma controlada e segura, com verificações de qualidade, segurança e custo antes de qualquer alteração no ambiente produtivo. O uso de ferramentas como Terraform e Infracost permite automação e transparência, contribuindo para um gerenciamento eficiente da infraestrutura em nuvem.
 
-![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/04.png)
 
 ## Arquitetura de CI/CD com Azure DevOps para Deploy no Azure Kubernetes Service (AKS)
+
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/04.png)
 
 O diagrama a seguir ilustra um pipeline de CI/CD configurado no Azure DevOps, integrando o Azure Kubernetes Service (AKS) para orquestração de contêineres. Esse pipeline automatiza o processo de build, packaging, armazenamento e deploy de uma aplicação em contêiner no AKS.
 
@@ -141,19 +132,21 @@ O diagrama a seguir ilustra um pipeline de CI/CD configurado no Azure DevOps, in
 
 Esse fluxo automatizado facilita a integração e o deploy contínuos, assegurando que cada alteração no código seja construída, validada e implantada de maneira consistente. A integração com Docker e Helm permite uma configuração flexível e reproduzível para a implantação de contêineres no AKS.
 
-![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/05.png)
-![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/06.png)
-![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/07.png)
-![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/08.png)
-![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/09.png)
-![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/10.png)
-![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/11.png)
-![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/12.png)
-![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/13.png)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/05.jpg)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/06.jpg)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/07.jpg)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/14.jpg)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/15.jpg)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/08.jpg)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/09.jpg)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/10.jpg)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/11.jpg)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/12.jpg)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tftec/13.jpg)
 
 ## Conclusão
 
-O **TFTEC Ao Vivo** foi um evento sensacional, proporcionando uma oportunidade única de rever amigos, fortalecer o networking e aprender mais sobre o universo Azure. Durante dois dias intensivos, profissionais de todo o Brasil puderam se aprofundar em tecnologias de ponta, participar de sessões práticas e interagir diretamente com especialistas da área. Além do aprendizado técnico, o ambiente acolhedor e colaborativo criou um espaço valioso para trocas de experiências e conexões duradouras, reafirmando a importância da comunidade Azure no desenvolvimento de novas competências e na inovação contínua. Estamos ansiosos para o próximo encontro e para continuar crescendo juntos na jornada rumo à nuvem!
+O **TFTEC Ao Vivo** foi um evento incrível, proporcionando uma oportunidade única de rever amigos, fortalecer o networking e aprender mais sobre o universo Azure. Durante dois dias imersivos, profissionais de todo o Brasil puderam se aprofundar em tecnologias de ponta, participar de sessões práticas e interagir diretamente com especialistas da área. Além do aprendizado técnico, o ambiente amigável e colaborativo criou um espaço valioso para trocas de experiências e conexões duradouras, reafirmando a importância da comunidade Azure no desenvolvimento de novas competências e na inovação contínua. Estamos ansiosos para o próximo encontro e para continuar crescendo juntos na jornada rumo à nuvem!
 
 Caso queira visitar o repositório oficial do projeto, segue o [link](https://github.com/raphasi/tftecsp2024?tab=readme-ov-file)
 
