--- a/_posts/2024-11-04-tftec2024.md
+++ b/_posts/2024-11-04-tftec2024.md
@@ -148,7 +148,9 @@ Esse fluxo automatizado facilita a integração e o deploy contínuos, asseguran
 
 O **TFTEC Ao Vivo** foi um evento incrível, proporcionando uma oportunidade única de rever amigos, fortalecer o networking e aprender mais sobre o universo Azure. Durante dois dias imersivos, profissionais de todo o Brasil puderam se aprofundar em tecnologias de ponta, participar de sessões práticas e interagir diretamente com especialistas da área. Além do aprendizado técnico, o ambiente amigável e colaborativo criou um espaço valioso para trocas de experiências e conexões duradouras, reafirmando a importância da comunidade Azure no desenvolvimento de novas competências e na inovação contínua. Estamos ansiosos para o próximo encontro e para continuar crescendo juntos na jornada rumo à nuvem!
 
-Caso queira visitar o repositório oficial do projeto, segue o [link](https://github.com/raphasi/tftecsp2024?tab=readme-ov-file)
+Caso queira visitar o repositório oficial do projeto, segue os links:
+[tftecsp2024](https://github.com/raphasi/tftecsp2024?tab=readme-ov-file)
+[-tftec-aovivo-iac](https://github.com/raphasi/-tftec-aovivo-iac/tree/main)
 
 ---
 
