--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -17,6 +17,9 @@ Neste blog post, compartilho minha jornada na plataforma Spotify através do Pod
 
 ### Episódios Destacados
 
+#### #15 Episódio com Pedro Ignácio: A Jornada para a KubeCon e as Expectativas de um BR
+[![#15 Episódio com Pedro Ignácio: A Jornada para a KubeCon e as Expectativas de um BR](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/15.png)](https://open.spotify.com/episode/5UrIpoO9saIzvtKv3ZNhqM?si=e2475df9545f4836)
+
 #### #14 Episódio com Peter König
 [![#14 Episódio com Peter König](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/14.png)](https://open.spotify.com/episode/5y3lQmumfnukYJ22jL51F3?si=fb0784aa7a4540c0)
 
