--- a/_posts/2024-03-15-youtube.md
+++ b/_posts/2024-03-15-youtube.md
@@ -65,6 +65,9 @@ Nesta seção do blog, compartilho minha jornada nas plataformas YouTube pelos c
 
 [![Azure Floripa](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/azurefloripa.png)](https://www.youtube.com/@AzureFloripa)
 
+## Conhecendo as vertentes do Copilot e o que ele pode fazer no Azure com Marcelo Souza
+[![Conhecendo as vertentes do Copilot e o que ele pode fazer no Azure com Marcelo Souza](https://img.youtube.com/vi/R9lFLWeNlbU/0.jpg)](https://www.youtube.com/watch?v=R9lFLWeNlbU)
+
 ## Governança Azure: Você Precisa Estar Atento! com Osanam Giordane
 [![Governança Azure: Você Precisa Estar Atento! com Osanam Giordane](https://img.youtube.com/vi/oLDXUuOyIjA/0.jpg)](https://www.youtube.com/watch?v=oLDXUuOyIjA)
 
