--- a/_posts/2024-03-15-youtube.md
+++ b/_posts/2024-03-15-youtube.md
@@ -13,6 +13,9 @@ Nesta seção do blog, compartilho minha jornada nas plataformas YouTube pelos c
 
 [![LowOps Channel](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Youtube-Banner.png)](https://www.youtube.com/@LowOps-Channel)
 
+## #16 Episódio com Matheus Ulisses: Jornada Profissional e Experiência na KubeCon
+[![#16 Episódio com Matheus Ulisses: Jornada Profissional e Experiência na KubeCon](https://img.youtube.com/vi/bVXEYZUBpmY/0.jpg)](https://www.youtube.com/watch?v=bVXEYZUBpmY)
+
 ## #15 Episódio com Pedro Ignácio: A Jornada para a KubeCon e as Expectativas de um BR
 [![#15 Episódio com Pedro Ignácio: A Jornada para a KubeCon e as Expectativas de um BR](https://img.youtube.com/vi/YNOkzI-ffCU/0.jpg)](https://www.youtube.com/watch?v=YNOkzI-ffCU)
 
