--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -17,6 +17,9 @@ Neste blog post, compartilho minha jornada na plataforma Spotify através do Pod
 
 ### Episódios Destacados
 
+#### #16 Episódio com Matheus Ulisses: Jornada Profissional e Experiência na KubeCon
+[![#16 Episódio com Matheus Ulisses: Jornada Profissional e Experiência na KubeCon](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/16.png)](https://open.spotify.com/episode/6ZwaCKpzcpHa1Wdop2Yw6o?si=77bd696c6e284114)
+
 #### #15 Episódio com Pedro Ignácio: A Jornada para a KubeCon e as Expectativas de um BR
 [![#15 Episódio com Pedro Ignácio: A Jornada para a KubeCon e as Expectativas de um BR](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/15.png)](https://open.spotify.com/episode/5UrIpoO9saIzvtKv3ZNhqM?si=e2475df9545f4836)
 
