--- a/_posts/2024-03-15-youtube.md
+++ b/_posts/2024-03-15-youtube.md
@@ -3,11 +3,11 @@ layout: post
 title: "YouTube"
 author: rafaferreira011
 #date: 2023-10-27 18:30:00 -500
-categories: [Canais, Youtube]
-tags: [Canais, Youtube]
+categories: [Canais, Youtube, LowOps Channel]
+tags: [Canais, Youtube, LowOps Channel]
 ---
 
-Nesta seção do blog, compartilho minha jornada nas plataformas YouTube pelos canais Azure Floripa e LowOps Channel. Através desses canais, compartilho conhecimentos, experiências e inspirações, visando motivar e enriquecer profissionalmente a comunidade. Aqui, você encontrará insights valiosos sobre tecnologia em geral, fortalecendo a comunidade técnica e fornecendo acesso a conteúdos de forma gratuita e simplificada. Junte-se a nós nesta aventura tecnológica!
+Nesta seção do blog, compartilho minha jornada na plataforma YouTube pelo canal LowOps Channel. Através desse canal, compartilho conhecimentos, experiências e inspirações, visando motivar e enriquecer profissionalmente a comunidade. Aqui, você encontrará insights valiosos sobre tecnologia em geral, fortalecendo a comunidade técnica e fornecendo acesso a conteúdos de forma gratuita e simplificada. Junte-se a nós nesta aventura tecnológica!
 
 # LowOps Channel
 
