--- a/_posts/2024-02-25-kcdsp24.md
+++ b/_posts/2024-02-25-kcdsp24.md
@@ -3,8 +3,8 @@ layout: post
 title: "KCD Brasil, São Paulo 2024"
 author: rafaferreira011
 #date: 2023-10-27 18:30:00 -500
-categories: [Registro Eventos Presenciais, Palestrante, KCD Brasil, São Paulo 2024]
-tags: [Registro Eventos Presenciais, Eventos, Comunidade, KCD Brasil, São Paulo 2024]
+categories: [Registro Eventos Presenciais, Palestrante, KCD Brasil - São Paulo 2024]
+tags: [Registro Eventos Presenciais - Eventos, Comunidade, KCD Brasil - São Paulo 2024]
 ---
 
 No dia 24 de fevereiro de 2024, tive a oportunidade de palestrar no **Kubernetes Community Days (KCD) Brasil**, realizado na Natura NASP, em São Paulo. Esse evento híbrido foi um marco no cenário Cloud Native no Brasil, reunindo especialistas, entusiastas e líderes da área para dois dias de aprendizado, troca de ideias e networking.
