--- a/_posts/2024-07-21-kcd.md
+++ b/_posts/2024-07-21-kcd.md
@@ -13,4 +13,6 @@ KCDs (Kubernetes Community Days) são eventos organizados pela comunidade que re
 
 [KCD Floripa 2024](https://community.cncf.io/events/details/cncf-kcd-brasil-presents-kcd-floripa-brasil-2024/)
 
+[Nossos links](https://linktr.ee/cloudnativesc)
+
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/kcd-floripa.png)
