--- a/_posts/2024-02-25-kcdsp24.md
+++ b/_posts/2024-02-25-kcdsp24.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "KCD Brasil, São Paulo 2024"
+title: "KCD Brasil - São Paulo 2024"
 author: rafaferreira011
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Palestrante, KCD Brasil - São Paulo 2024]
