--- a/_posts/2024-11-23-code.island24.md
+++ b/_posts/2024-11-23-code.island24.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Code Island Cloud 2024: Pipelines com Azure DevOps: Automatizando o (Im)possível
+title: Code Island Cloud 2024: Pipelines com Azure DevOps - Automatizando o (Im)possível
 author: rafaferreira011
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Palestrante, Code Island Cloud 2024]
