--- a/_posts/2024-07-21-kcd.md
+++ b/_posts/2024-07-21-kcd.md
@@ -16,3 +16,39 @@ KCDs (Kubernetes Community Days) são eventos organizados pela comunidade que re
 [Nossos links](https://linktr.ee/cloudnativesc)
 
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/kcd-floripa.png)
+
+---
+layout: post
+title: "Organizador Eventos – KCD Floripa Brazil 2024"
+author: rafaferreira011
+categories: [Voluntariado, Eventos, KCD Floripa Brazil]
+tags: [Voluntariado, KCD, Kubernetes, Cloud Native, Florianópolis]
+---
+
+## Introdução
+
+Os **Kubernetes Community Days (KCDs)** são eventos organizados pela comunidade que reúnem entusiastas e profissionais interessados no universo nativo da nuvem e de código aberto. Promovendo educação, colaboração e networking, os KCDs são oficialmente apoiados pela **Cloud Native Computing Foundation (CNCF)** e realizados localmente para fortalecer as comunidades regionais.  
+
+Em 2024, Florianópolis foi palco do **KCD Floripa**! Foi uma oportunidade única de aprender, se conectar com especialistas e explorar as tendências mais recentes do mundo Cloud Native.
+
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/KCD/0.png)
+
+🌐 **Site oficial:** [KCD Floripa 2024](https://community.cncf.io/events/details/cncf-kcd-brasil-presents-kcd-floripa-brasil-2024/)  
+👉 **Acesse nossos links:** [Linktree do evento](https://linktr.ee/cloudnativesc)  
+
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/KCD/1.png)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/KCD/2.png)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/KCD/3.png)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/KCD/4.png)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/KCD/5.png)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/KCD/6.png)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/KCD/7.png)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/KCD/8.png)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/KCD/9.png)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/KCD/10.png)
+
+---
+
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Logo2.png)
+
+
