--- a/_posts/2024-07-21-kcd.md
+++ b/_posts/2024-07-21-kcd.md
@@ -5,6 +5,8 @@ author: rafaferreira011
 #date: 2023-10-27 18:30:00 -500
 categories: [Voluntariado, Organizador Eventos – KCD Floripa Brazil]
 tags: [Voluntariado, Organizador Eventos – KCD Floripa Brazil]
+image:
+  path: https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/KCD/0.png
 ---
 ## Introdução
 
