--- a/_posts/2024-07-21-kcd.md
+++ b/_posts/2024-07-21-kcd.md
@@ -6,7 +6,7 @@ author: rafaferreira011
 categories: [Voluntariado, Organizador Eventos – KCD Floripa Brazil]
 tags: [Voluntariado, Organizador Eventos – KCD Floripa Brazil]
 image:
-  path: https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/KCD/0.png
+  path: https://images.credly.com/size/680x680/images/baf493ca-d548-435b-9811-5c3385a674be/image.png
 ---
 ## Introdução
 
@@ -17,7 +17,9 @@ Em 2024, Florianópolis foi palco do **KCD Floripa**! Foi uma oportunidade únic
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/KCD/0.png)
 
 🌐 **Site oficial:** [KCD Floripa 2024](https://community.cncf.io/events/details/cncf-kcd-brasil-presents-kcd-floripa-brasil-2024/)  
-👉 **Acesse nossos links:** [Linktree do evento](https://linktr.ee/cloudnativesc)  
+👉 **Acesse nossos links:** [Linktree do evento](https://linktr.ee/cloudnativesc)
+
+![https://www.credly.com/badges/7091a4a1-5ab1-4a3d-a91a-8eb6407e72d5/public_url](https://images.credly.com/size/680x680/images/baf493ca-d548-435b-9811-5c3385a674be/image.png)
 
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/KCD/1.jpg)
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/KCD/2.jpg)
