--- a/_posts/2024-07-21-kcd.md
+++ b/_posts/2024-07-21-kcd.md
@@ -34,6 +34,9 @@ Em 2024, Florianópolis foi palco do **KCD Floripa**! Foi uma oportunidade únic
 
 [![](https://www.credly.com/badges/7091a4a1-5ab1-4a3d-a91a-8eb6407e72d5/public_url)](https://images.credly.com/size/680x680/images/baf493ca-d548-435b-9811-5c3385a674be/image.png)
 
+[![KCD Floripa 2024]](https://images.credly.com/size/680x680/images/baf493ca-d548-435b-9811-5c3385a674be/image.png)](https://www.credly.com/badges/7091a4a1-5ab1-4a3d-a91a-8eb6407e72d5/public_url)
+
+
 ---
 
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Logo2.png)
