--- a/_posts/2024-02-25-kcdsp24.md
+++ b/_posts/2024-02-25-kcdsp24.md
@@ -5,6 +5,8 @@ author: rafaferreira011
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Palestrante, KCD Brasil - São Paulo 2024]
 tags: [Registro Eventos Presenciais - Eventos, Comunidade, KCD Brasil - São Paulo 2024]
+image:
+  path: https://images.credly.com/images/57fa51c3-4942-4fc7-ade4-0f729b43bfbd/image.png
 ---
 
 No dia 24 de fevereiro de 2024, tive a oportunidade de palestrar no **Kubernetes Community Days (KCD) Brasil**, realizado na Natura NASP, em São Paulo. Esse evento híbrido foi um marco no cenário Cloud Native no Brasil, reunindo especialistas, entusiastas e líderes da área para dois dias de aprendizado, troca de ideias e networking.
@@ -31,6 +33,8 @@ Os pontos altos foram os debates sobre o impacto de práticas sustentáveis e as
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/kcdsp24/4.jpg)
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/kcdsp24/5.jpg)
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/kcdsp24/6.jpg)
+
+[![Contributor - KCD São Paulo, Brazil 2024](https://images.credly.com/images/57fa51c3-4942-4fc7-ade4-0f729b43bfbd/image.png)](https://www.credly.com/badges/a6940f87-b34a-497e-8c1e-93545075c0ee/public_url "Contributor - KCD São Paulo, Brazil 2024")
 
 ## Destaques do KCD Brasil 2024
 
