--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -14,7 +14,7 @@ tabs:
   categories: Categorias
   archives: Timeline
   tags: Tags
-  about: Sobre
+  #about: Sobre
   experiences: Experiências
   certifications: Certificações
   certificates: Certificados
