#18 Episódio com Diego Pauletto

--- a/_posts/2024-03-15-youtube.md
+++ b/_posts/2024-03-15-youtube.md
@@ -13,6 +13,9 @@ Nesta seção do blog, compartilho minha jornada na plataforma YouTube pelo cana
 
 [![LowOps Channel](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Youtube-Banner.png)](https://www.youtube.com/@LowOps-Channel)
 
+## #18 Episódio com Diego Pauletto
+[![#18 Episódio com Diego Pauletto](https://img.youtube.com/vi/1UfngWVAxzc/0.jpg)](https://www.youtube.com/watch?v=1UfngWVAxzc)
+
 ## #17 Episódio com Cláudio Filipe Lima Raposo
 [![#17 Episódio com Cláudio Filipe Lima Raposo](https://img.youtube.com/vi/OGpTWpPA2qY/0.jpg)](https://www.youtube.com/watch?v=OGpTWpPA2qY)
 
