--- a/_posts/2025-01-09-az-policy.md
+++ b/_posts/2025-01-09-az-policy.md
@@ -18,8 +18,6 @@ O Azure Policy avalia continuamente os recursos e as ações no Azure com base e
 - **Conformidade Regulatória:** Auxilia no cumprimento de normas como GDPR, ISO 27001 e SOC 2.
 - **Gerenciamento de Custo:** Impede a criação de recursos não aprovados e ajuda no controle de gastos.
 
----
-
 ## Como o Azure Policy Funciona?
 
 O **Azure Policy** funciona criando e aplicando **definições de política** e **iniciativas** para controlar como os recursos são implantados e gerenciados. Esses componentes incluem:
@@ -64,8 +62,6 @@ As políticas podem ter diferentes efeitos, como:
 - **Modify:** Faz modificações automáticas nos recursos para garantir conformidade.
 - **DeployIfNotExists:** Implanta recursos adicionais para garantir conformidade.
 
----
-
 ## Imagine a Situação: Ser Bloqueado por uma Política do Azure
 
 Imagine que você está tentando implantar uma nova máquina virtual no Azure para testar uma aplicação. Você escolhe uma região aleatória, digamos **South India**, porque parece conveniente no momento. No entanto, ao tentar concluir a criação da VM, você recebe um erro: 
@@ -92,8 +88,6 @@ Se você precisar de uma exceção para essa política, você pode:
 
 Essa experiência mostra como o **Azure Policy** ajuda a manter o controle e a segurança, mesmo quando parece um bloqueio.
 
----
-
 ## Azure Policy vs Azure RBAC (Controle de Acesso Baseado em Função)
 
 Embora ambos estejam relacionados à governança e controle no Azure, eles têm propósitos diferentes:
@@ -104,7 +98,6 @@ Embora ambos estejam relacionados à governança e controle no Azure, eles têm 
 | **Escopo de Aplicação**     | Regras de conformidade e segurança | Controle de ações de usuários   |
 | **Exemplo de Uso**          | Negar criação de VMs não criptografadas | Restringir quem pode criar VMs |
 
----
 
 ## Melhores Práticas ao Utilizar Azure Policy
 
@@ -113,14 +106,7 @@ Embora ambos estejam relacionados à governança e controle no Azure, eles têm 
 - **Automatize com Azure DevOps:** Implemente Azure Policy como código (Policy as Code) para aplicar políticas de forma automatizada em pipelines CI/CD.
 - **Exclua Recursos Sensíveis:** Utilize `notScopes` para excluir recursos ou grupos de recursos específicos de políticas rígidas.
 
----
-
 ## Conclusão
 
-O **Azure Policy** é uma ferramenta essencial para garantir governança e conformidade no Azure. Ele oferece controle robusto para organizações que buscam proteger seus ambientes de nuvem e manter padrões de segurança e conformidade regulatória. Implementando boas práticas e monitoramento contínuo, você pode garantir que seu ambiente esteja sempre seguro e alinhado às políticas organizacionais.
+O **Azure Policy** é uma ferramenta essencial para garantir governança e conformidade no Azure. Ele oferece controle robusto para organizações que buscam proteger seus ambientes de nuvem e manter padrões de segurança e conformidade regulatória. Implementando boas práticas e monitoramento contínuo, você pode garantir que seu ambiente esteja sempre seguro e alinhado às políticas organizacionais. Quer aprender mais? Explore a documentação oficial do [Azure Policy](https://learn.microsoft.com/pt-br/azure/governance/policy/)
 
----
-
-Quer aprender mais? Explore a documentação oficial do [Azure Policy](https://learn.microsoft.com/pt-br/azure/governance/policy/) ou confira nossos tutoriais práticos no canal **LowOps Channel** no YouTube!
-
-Posso te ajudar a criar uma demonstração prática ou script para aplicar políticas no Azure? 🚀
