--- a/_posts/2025-01-09-az-policy.md
+++ b/_posts/2025-01-09-az-policy.md
@@ -6,7 +6,10 @@ categories: [Artigos, Azure, Policy]
 tags: [Artigos, Azure, Segurança, TLS, Policy]
 ---
 
-O **Azure Policy** é um serviço nativo do Microsoft Azure projetado para ajudar organizações a implementar governança e conformidade de forma automatizada e em larga escala. Ele garante que os recursos na nuvem estejam em conformidade com as diretrizes corporativas, padrões de segurança e requisitos regulatórios.
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/artigos/az-policy/01.png)
+
+
+O [**Azure Policy**](https://learn.microsoft.com/pt-br/azure/governance/policy/) é um serviço nativo do Microsoft Azure projetado para ajudar organizações a implementar governança e conformidade de forma automatizada e em larga escala. Ele garante que os recursos na nuvem estejam em conformidade com as diretrizes corporativas, padrões de segurança e requisitos regulatórios.
 
 ## O que o Azure Policy Faz?
 O Azure Policy avalia continuamente os recursos e as ações no Azure com base em **definições de política**. Essas definições, escritas em formato JSON, descrevem regras que determinam se os recursos estão ou não em conformidade com os padrões estabelecidos.
@@ -17,6 +20,8 @@ O Azure Policy avalia continuamente os recursos e as ações no Azure com base e
 - **Segurança e Gerenciamento:** Reforça políticas de segurança, como restringir SKUs de VMs, impor criptografia e definir regiões específicas para implantação de recursos.
 - **Conformidade Regulatória:** Auxilia no cumprimento de normas como GDPR, ISO 27001 e SOC 2.
 - **Gerenciamento de Custo:** Impede a criação de recursos não aprovados e ajuda no controle de gastos.
+
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/artigos/az-policy/02.png)
 
 ## Como o Azure Policy Funciona?
 
@@ -70,6 +75,8 @@ Imagine que você está tentando implantar uma nova máquina virtual no Azure pa
 
 O que aconteceu? Você foi impedido por uma **Azure Policy** aplicada em sua organização! Essa política foi configurada pelo time de governança de TI para garantir que todos os recursos sejam criados apenas em regiões específicas, como **East US** e **West Europe**, por razões de conformidade e segurança.
 
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/artigos/az-policy/04.png)
+
 ### Frustração? Sim. Mas por uma Boa Razão.
 
 Parece frustrante ser bloqueado quando você só queria testar uma VM, certo? No entanto, o propósito dessa **regra** não é atrapalhar seu trabalho, mas sim proteger o ambiente da empresa e manter padrões consistentes. Veja o porquê:
@@ -98,6 +105,7 @@ Embora ambos estejam relacionados à governança e controle no Azure, eles têm 
 | **Escopo de Aplicação**     | Regras de conformidade e segurança | Controle de ações de usuários   |
 | **Exemplo de Uso**          | Negar criação de VMs não criptografadas | Restringir quem pode criar VMs |
 
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/artigos/az-policy/03.png)
 
 ## Melhores Práticas ao Utilizar Azure Policy
 
@@ -108,5 +116,8 @@ Embora ambos estejam relacionados à governança e controle no Azure, eles têm 
 
 ## Conclusão
 
-O **Azure Policy** é uma ferramenta essencial para garantir governança e conformidade no Azure. Ele oferece controle robusto para organizações que buscam proteger seus ambientes de nuvem e manter padrões de segurança e conformidade regulatória. Implementando boas práticas e monitoramento contínuo, você pode garantir que seu ambiente esteja sempre seguro e alinhado às políticas organizacionais. Quer aprender mais? Explore a documentação oficial do [Azure Policy](https://learn.microsoft.com/pt-br/azure/governance/policy/)
+O **Azure Policy** é uma ferramenta essencial para garantir governança e conformidade no Azure. Ele oferece controle robusto para organizações que buscam proteger seus ambientes de nuvem e manter padrões de segurança e conformidade regulatória. Implementando boas práticas e monitoramento contínuo, você pode garantir que seu ambiente esteja sempre seguro e alinhado às políticas organizacionais. Quer aprender mais?
 
+---
+
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Logo2.png)
