#18 Episódio com Diego Pauletto

--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -17,6 +17,12 @@ Neste blog post, compartilho minha jornada na plataforma Spotify através do Pod
 
 ### Episódios Destacados
 
+#### #18 Episódio com Diego Pauletto
+[![#18 Episódio com Diego Pauletto](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/18.png)](https://open.spotify.com/episode/22cdYAvuelgMP1GhM1ldHO?si=8ba9b1aafac04964)
+
+#### #17 Episódio com Cláudio Filipe Lima Raposo
+[![#17 Episódio com Cláudio Filipe Lima Raposo](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/17.png)](https://open.spotify.com/episode/40e5blviRAj7Pk35tA6HVN?si=f57e373ab7a443b6)
+
 #### #16 Episódio com Matheus Ulisses: Jornada Profissional e Experiência na KubeCon
 [![#16 Episódio com Matheus Ulisses: Jornada Profissional e Experiência na KubeCon](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/16.png)](https://open.spotify.com/episode/6ZwaCKpzcpHa1Wdop2Yw6o?si=77bd696c6e284114)
 
